# pymod6

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: Makefile
docs/templates/: module.html.jinja2
notebooks/: basic_sweep.ipynb  forward_model.ipynb
src/pymod6/: __init__.py  _env.py  _exec.py  _input.py  _input_builder.py  _output.py  _util.py  bandmodel.py  io.py  output.py  unit.py
src/pymod6/input/: __init__.py  _builder.py  _json.py  _util.py  basecases.py  schema.py
src/pymod6/output/: __init__.py  _io.py  _nav.py
tests/: conftest.py  test_examples.py  test_files.py  test_io.py  test_output.py
