[tool.poetry]
name = "pymod6"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "pymod6" },
]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"
pydantic = "^2.5.3"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# isort config.
[tool.isort]
profile = "black"

# mypy config.
[tool.mypy]
strict = true

# pytest config
[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src"]
