[tool.poetry]
name = "pymod6"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "pymod6" },
]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"
pydantic = "^2.5.3"
numpy = "^1.26.3"
spectral = "^0.23.1"
xarray = "^2024.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-xdist = "^3.5.0"
ruff = "^0.2.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# isort config.
[tool.isort]
profile = "black"

# mypy config.
[tool.mypy]
strict = true

# pytest config
[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src", "tests"]

# pyright config.
[tool.pyright]
reportTypedDictNotRequiredAccess = false
